# pokemonsnap

./: .clang-format  .editorconfig  .gitignore  .gitmodules  Jenkinsfile  Makefile  POKEMON_SNAP.u.yaml  README.md  asdf.txt  checksum.md5  checksum.sha1  configure.py  decomp.yaml  diff.py  diff_settings.py  first_diff.py  globals.inc  illegal_copy_check.yaml  intro.yaml  make_expected.sh  n64_logo.yaml  nintendo64_logo.yaml  pokemonsnap.ld  pyproject.toml  requirements.txt  rights_notice.yaml  splat.yaml  splitrom.sh  symbol_addrs_intro.txt  undefined_funcs.txt  undefined_funcs_auto.txt  undefined_syms.txt  undefined_syms_auto.txt  undefined_syms_intro.txt  undefined_syms_n64_logo.txt  undefined_syms_nintendo64_logo.txt  vpk0_code.yaml
include/: anim_script.h  common.h  common_structs.h  constants.h  enums.h  functions.h  hal.h  macros.h  sys.h  types.h  variables.h
pokemonsnap/: Makefile  globals.inc  pokemonsnap.ld  pokemonsnap.s  undefined_syms.txt
src/: 1060.c  11E30.c  1520.c  162CB0.c  1A560.c  1AF60.c  1BCF0.c  1F5E70.c  1F960.c  20940.c  245E0.c  26D80.c  29610.c  29A190.c  2A810.c  2B2A0.c  2B920.c  2C0B0.c  2CF70.c  2DBE0.c  2EBB0.c  2ED30.c  30C80.c  326B0.c  326C10.c  32ED0.c  33620.c  35E0.c  36470.c  366A0.c  38B70.c  3E340.c  3F63D0.c  46270.c  4680.c  47330.c  47380.c  4A8160.c  4B670.c  4D400.c  (+215 more)
tools/: bin2c.py  codescan.py  create_undefined_syms.py  first_diff.py  m2ctx.py  mksprite.py  permuter-settings.toml  progress.py  splat.yaml  splat_objects.py  splat_seg.py  stuff.py  stuff.txt  symbol_addrs.txt  vpk0.py  vpk0_codec.py  vpk0_diagnose.py
(+1169 files in other folders)
