[project]
name = "pokemonsnap"
description = "A WIP decomp of Pokemon Snap"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "argparse>=1.4.0",
    "gitpython>=3.1.46",
    "mapfile-parser>=2.12.1",
    "n64img>=0.3.3",
    "ninja-syntax>=1.7.2",
    "pypng>=0.20220715.0",
    "requests>=2.32.5",
    "spimdisasm>=1.39.0",
    "splat64[mips]>=0.36.3",
]
